# Triangles

./: CMakeLists.txt  README.md  examples.cpp  float_cmp.hpp  geometry.hpp  input.hpp  main.cpp
src/: float_cmp.hpp  geometry.hpp  input.hpp
tests/: CMakeLists.txt  my_tests.cpp
tests/E2E tests/: 10.txt  6.txt
tests/E2E_tests/: 1.txt  flower.txt
triangles_test/: CMakeLists.txt  my_tests.cpp
triangles_test/E2E tests/: 2.txt  3.txt  4.txt  5.txt  7.txt  8.txt  9.txt  script.py
visualization/: .clang-format  CMakeLists.txt  camera.cpp  camera.hpp  camera_controller.cpp  camera_controller.hpp  compile.bat  device.cpp  device.hpp  first_app.cpp  first_app.hpp  keyboard_controller.cpp  keyboard_controller.hpp  main.cpp  model.cpp  model.hpp  object.hpp  pipeline.cpp  pipeline.hpp  render_system.cpp  render_system.hpp  renderer.cpp  renderer.hpp  swap_chain.cpp  swap_chain.hpp  window.hpp
visualization/shaders/: simple.frag  simple.vert
